# gnome-keyboard-cleaner

./: .gitignore  COPYING  README.md  io.github.Naplon.CleanMe.json  meson.build  naplon_.keyboard.cleaner.json
data/: io.github.Naplon.CleanMe.desktop.in  io.github.Naplon.CleanMe.gschema.xml  io.github.Naplon.CleanMe.metainfo.xml.in  io.github.Naplon.CleanMe.service.in  meson.build  naplon_.keyboard.cleaner.desktop.in  naplon_.keyboard.cleaner.gschema.xml  naplon_.keyboard.cleaner.metainfo.xml.in  naplon_.keyboard.cleaner.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: __init__.py  blur.py  clean_me.gresource.xml  clean_me.in  input_lock.py  keyboard_cleaner.gresource.xml  keyboard_cleaner.in  main.py  meson.build  style.css  window.py  window.ui
