pkgdatadir = get_option('prefix') / get_option('datadir') / meson.project_name()
moduledir = pkgdatadir / 'keyboard_cleaner'
gnome = import('gnome')

gnome.compile_resources('keyboard_cleaner',
  'keyboard_cleaner.gresource.xml',
  gresource_bundle: true,
  install: true,
  install_dir: pkgdatadir,
)

python = import('python')

conf = configuration_data()
conf.set('PYTHON', python.find_installation('python3').full_path())
conf.set('VERSION', meson.project_version())
conf.set('localedir', get_option('prefix') / get_option('localedir'))
conf.set('pkgdatadir', pkgdatadir)

configure_file(
  input: 'keyboard_cleaner.in',
  output: 'keyboard_cleaner',
  configuration: conf,
  install: true,
  install_dir: get_option('bindir'),
  install_mode: 'rwxr-xr-x'
)

keyboard_cleaner_sources = [
  '__init__.py',
  'main.py',
  'window.py',
  'input_lock.py',
]

install_data(keyboard_cleaner_sources, install_dir: moduledir)
